<resources>
    <string name="app_name">SampleAndroid</string>
    <string name="id">ログインID</string>
    <string name="password">パスワード</string>
    <string name="login_button_text">ログイン</string>

    <string name="login_id_hint">ログインIDを入力してください。</string>
    <string name="password_id_hint">パスワードを入力してください。</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
</resources>
