<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <ImageView android:id="@+id/image"
                   android:layout_width="match_parent"
                   android:layout_height="120dp"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginTop="@dimen/login_margin_top"
                   android:src="@drawable/logo"/>
        <RelativeLayout android:id="@+id/login_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/login_margin_left"
                        android:layout_marginRight="@dimen/login_margin_right"
                        android:layout_marginTop="30dp"
                        android:descendantFocusability="beforeDescendants"
                        android:focusableInTouchMode="true"
                        android:layout_below="@+id/image">
            <TextView android:id="@+id/login_id_text"
                      android:textSize="@dimen/login_text_size"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/id"
                      android:layout_alignParentTop="true"
                      android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"
            />
            <EditText android:id="@+id/login_id_edit"
                      android:textSize="@dimen/login_text_size"
                      android:layout_height="@dimen/login_input_height"
                      android:layout_width="match_parent"
                      android:layout_below="@+id/login_id_text"
                      android:layout_alignParentRight="true"
                      android:layout_marginTop="8dp"
                      android:paddingLeft="10dp"
                      android:paddingRight="10dp"
                      android:background="@drawable/bg_textview"
                      android:hint="@string/login_id_hint"
                      android:inputType="textVisiblePassword"
                      android:textColor="@color/textColor"/>
            <TextView android:id="@+id/user_error"
                      android:textSize="@dimen/login_text_size"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:visibility="gone"
                      android:layout_below="@+id/login_id_edit"
                      android:textColor="@android:color/holo_red_light"
                      android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/login_margin_left"
                        android:layout_marginRight="@dimen/login_margin_right"
                        android:layout_marginTop="30dp"
                        android:descendantFocusability="beforeDescendants"
                        android:focusableInTouchMode="true"
                        android:layout_below="@+id/login_id">
            <TextView android:id="@+id/password_text"
                      android:textSize="@dimen/login_text_size"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/password"
                      android:layout_alignParentTop="true"
                      android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"
            />
            <EditText android:textSize="@dimen/login_text_size"
                      android:layout_height="@dimen/login_input_height"
                      android:paddingLeft="10dp"
                      android:paddingRight="10dp"
                      android:layout_marginTop="8dp"
                      android:inputType="textPassword"
                      android:maxLines="1"
                      android:background="@drawable/bg_textview"
                      android:id="@+id/password_edit"
                      android:hint="@string/password_id_hint"
                      android:layout_width="match_parent"
                      android:layout_below="@+id/password_text"
                      android:layout_alignParentRight="true"
                      android:textColor="@color/textColor"
            />
            <TextView android:textSize="@dimen/login_text_size"
                      android:id="@+id/password_error"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:visibility="gone"
                      android:layout_below="@+id/password_edit"
                      android:textColor="@android:color/holo_red_light"
                      android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"/>
        </RelativeLayout>
        <RelativeLayout android:layout_below="@+id/password"
                        android:id="@+id/relSignin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/login_margin_left"
                        android:layout_marginRight="@dimen/login_margin_right"
                        android:layout_marginTop="25dp">
            <Button android:textSize="@dimen/login_text_size"
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_input_height"
                    android:layout_alignParentRight="true"
                    android:text="@string/login_button_text"
                    android:textColor="@android:color/white"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
